title wrap fix

--- a/wp-content/themes/VitalWalls/less/_woocommerce.less
+++ b/wp-content/themes/VitalWalls/less/_woocommerce.less
@@ -216,9 +216,9 @@
       font-weight: 600;
         font-size: 1em;
         color: @brand-secondary;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        // white-space: nowrap;
+        // overflow: hidden;
+        // text-overflow: ellipsis;
         font-family: 'gotham_bookregular';
         margin: 0 0 0.5em 0;
         transition: all 0.5s ease;
