--- a/wp-content/themes/VitalWalls/style.css
+++ b/wp-content/themes/VitalWalls/style.css
@@ -2800,9 +2800,6 @@ a[data-readmore-toggle].more:before {
   font-weight: 600;
   font-size: 1em;
   color: #eb4c3d;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
   font-family: 'gotham_bookregular';
   margin: 0 0 0.5em 0;
   -webkit-transition: all 0.5s ease;
